--- a/frontEnd/src/index.html
+++ b/frontEnd/src/index.html
@@ -10,11 +10,10 @@
   <link rel="stylesheet" href="assets/css/imeria.css" />
    <!-- Bootstrap core CSS -->
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!--<script src="/node_modules/angular2-build/angular2.dev.js"></script>-->
+ <!-- index.html -->
+<!--<script src="/node_modules/angular2-build/angular2.dev.js"></script>-->
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <ng-app-root>Loading...</ng-app-root>
 </body>
 </html>
