--- a/frontEnd/src/index.html
+++ b/frontEnd/src/index.html
@@ -6,15 +6,18 @@
   <!--<base href="/">-->
   <base href=".">
 
-  <link rel="stylesheet" href="assets/css/main.css" />
+  <!--<link rel="stylesheet" href="assets/css/main.css" />-->
   <link rel="stylesheet" href="assets/css/imeria.css" />
    <!-- Bootstrap core CSS -->
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <!-- Bootstrap -->
+  <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!--<script src="/node_modules/angular2-build/angular2.dev.js"></script>-->
 </head>
 <body>
+  <!-- Bootstrap core JavaScript -->
+  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <app-root>Loading...</app-root>
 </body>
 </html>
